# nhs-prescribing-platform

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: stage-1.md
src/rx_platform/: __init__.py  cli.py  ingest.py
tests/: test_ingest.py
